src/objects/Alerta__c.object
<CustomObject>
    <fields>
        <fullName>Datacredito__c</fullName>
        <label>Datacredito</label>
        <referenceTo>Datacredito__c</referenceTo>
        <relationshipLabel>Alertas</relationshipLabel>
        <relationshipName>Alertas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuente__c</fullName>
        <label>Fuente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Novedad__c</fullName>
        <label>Novedad</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>